add directives reference